# TP-VC

./: CMakeLists.txt  README.md  bib.c  bib.h  libopencv_alphamat.4.9.0.dylib  libopencv_aruco.4.9.0.dylib  libopencv_bgsegm.4.9.0.dylib  libopencv_bioinspired.4.9.0.dylib  libopencv_calib3d.4.9.0.dylib  libopencv_ccalib.4.9.0.dylib  libopencv_core.4.9.0.dylib  libopencv_datasets.4.9.0.dylib  libopencv_dnn_objdetect.4.9.0.dylib  libopencv_dnn_superres.4.9.0.dylib  libopencv_dpm.4.9.0.dylib  libopencv_face.4.9.0.dylib  libopencv_features2d.4.9.0.dylib  libopencv_flann.4.9.0.dylib  libopencv_freetype.4.9.0.dylib  libopencv_fuzzy.4.9.0.dylib  libopencv_hfs.4.9.0.dylib  libopencv_highgui.4.9.0.dylib  libopencv_img_hash.4.9.0.dylib  libopencv_imgcodecs.4.9.0.dylib  libopencv_imgproc.4.9.0.dylib  libopencv_intensity_transform.4.9.0.dylib  libopencv_line_descriptor.4.9.0.dylib  libopencv_mcc.4.9.0.dylib  libopencv_ml.4.9.0.dylib  libopencv_objdetect.4.9.0.dylib  libopencv_optflow.4.9.0.dylib  libopencv_phase_unwrapping.4.9.0.dylib  libopencv_plot.4.9.0.dylib  libopencv_quality.4.9.0.dylib  libopencv_rapid.4.9.0.dylib  libopencv_reg.4.9.0.dylib  libopencv_rgbd.4.9.0.dylib  libopencv_saliency.4.9.0.dylib  libopencv_sfm.4.9.0.dylib  libopencv_shape.4.9.0.dylib  (+19 more)
visao/: main.cpp
visao.xcodeproj/: project.pbxproj
visao.xcodeproj/xcuserdata/pedroricardosilva.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
visao.xcodeproj/xcuserdata/pedroricardosilva.xcuserdatad/xcschemes/: xcschememanagement.plist
